pkg/lang/testdata/ub/config/invalid/configurations-bare-ident.ub
configurations: { aws: { default: { region: region } } }
